welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:21: error: expected start of definition
	override def run() {
                 ^MethodsDogHouse:52: error: Unmatched closing brace '}' ignored here
}
^